package factoryMethodPattern.product;

public class GifParsePictureUtil extends ParsePictureUtil {
    @Override
    public void parsePicuter() {
        System.out.println("parse picture(GIF)");
    }
}
