package factoryMethodPattern.product;

public class JpgParsePictureUtil extends ParsePictureUtil {
    @Override
    public void parsePicuter() {
        System.out.println("parse picture(JPG)");
    }
}
