package factoryMethodPattern.product;

public abstract class ParsePictureUtil {
    public abstract void parsePicuter();
}
